Making a login and register

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-	"cSpell.words": ["fiverr", "Splide"],
+	"cSpell.words": ["fiverr", "johndoe", "Splide"],
 	"typescript.tsdk": "node_modules\\typescript\\lib"
 }
