--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@prisma/client": "^4.11.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -21,6 +22,7 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"prisma": "^4.11.0",
 		"sass": "^1.59.3",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
@@ -30,6 +32,10 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"swiper": "^9.1.0"
+		"@lucia-auth/adapter-prisma": "^0.6.0",
+		"@lucia-auth/sveltekit": "^0.6.10",
+		"lucia-auth": "^0.9.1",
+		"swiper": "^9.1.0",
+		"zod": "^3.21.4"
 	}
 }
