--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"sass": "^1.59.3",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"sveltekit-superforms": "^0.5.25",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
